<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Killthemall</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_play">Jugar</string>
	<string name="menu_options">Opciones</string>
	<string name="menu_exit">Salir</string>
	<string name="sonidoMenu">Sonido</string>
 	<string name="vibracionMenu">Vibración</string>
 	<string name="accel">Acelerometro</string>

</resources>
