<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    	<ImageView
    	    android:id="@+id/kill_logo"
    	    android:layout_width="262dp"
    	    android:layout_height="147dp"
    	    android:layout_gravity="center"
    	    android:layout_marginBottom="20dip"
    	    android:layout_marginTop="40dip"
    	    android:src="@drawable/kill" >
		</ImageView>
	      	
	    <ImageButton
	        android:id="@+id/boton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="25dip"
	        android:layout_gravity="center"
	        android:background="#00F1"
	        android:contentDescription="@string/menu_play"
	        android:gravity="center_vertical|center_horizontal"
	        android:src="@drawable/pulsarj" />

	     <ImageButton
	         android:id="@+id/boton2"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_marginBottom="25dip"
	         android:layout_gravity="center"
	         android:background="#00F1"
	         android:contentDescription="@string/menu_options"
	         android:gravity="center_vertical|center_horizontal"
	         android:src="@drawable/pulsaro" />

	      <ImageButton
	        android:id="@+id/boton3"
	        android:layout_height="wrap_content"
    	    android:layout_width="wrap_content"
    	    android:layout_marginBottom="25dip"
	        android:background="#00F1"
	        android:layout_gravity="center"
	        android:gravity="center_vertical|center_horizontal"
	        android:contentDescription="@string/menu_exit"
	        android:src="@drawable/pulsars" />
	      
	      <!-- <TextView android:layout_height="wrap_content" 
	        android:text="@string/menu_play" 
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:layout_width="wrap_content" 
	        android:background="@drawable/boton" 
	        android:layout_gravity="center" 
	        android:gravity="center_vertical|center_horizontal" 
	        android:layout_marginBottom="30dip" 
	        android:id="@+id/play_button">	        
	    </TextView>
	    <TextView android:layout_height="wrap_content" 
	        android:text="@string/menu_options" 
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:layout_width="wrap_content" 
	        android:background="@drawable/boton" 
	        android:layout_gravity="center" 
	        android:gravity="center_vertical|center_horizontal" 
	        android:layout_marginBottom="30dip" 
	        android:id="@+id/options_button">	        
	    </TextView>
	    <TextView android:layout_height="wrap_content" 
	        android:text="@string/menu_exit" 
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:layout_width="wrap_content" 
	        android:background="@drawable/boton" 
	        android:layout_gravity="center" 
	        android:gravity="center_vertical|center_horizontal" 
	        android:id="@+id/exit_button">	        
	    </TextView> -->

</LinearLayout>
